--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Space Invaders</h1>
+    <canvas id="game"></canvas>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
