--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Space Invaders</h1>
+    <button class="restart-btn">Restart Game</button>
     <canvas id="game"></canvas>
     <script type="module" src="index.js"></script>
   </body>
